--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefit-main-block">
             <li class="benefit-block">
+              <div class="benefit-icon">
+                <svg width="100" height="100">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="text-title">Strategy</h3>
               <p class="text benefit-text">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +75,11 @@
             </li>
 
             <li class="benefit-block">
+              <div class="benefit-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="text-title">Punctuality</h3>
               <p class="text benefit-text">
                 Bring the key message to the brand's audience for the best price
@@ -78,6 +88,11 @@
             </li>
 
             <li class="benefit-block">
+              <div class="benefit-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="text-title">Diligence</h3>
               <p class="text benefit-text">
                 Research and confirm brands that present the strongest digital
@@ -86,6 +101,11 @@
             </li>
 
             <li class="benefit-block">
+              <div class="benefit-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="text-title">Technologies</h3>
               <p class="text benefit-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -110,6 +130,26 @@
               <div class="text-area">
                 <h3 class="text-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="icon">
@@ -122,6 +162,26 @@
               <div class="text-area">
                 <h3 class="text-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="icon">
@@ -134,6 +194,26 @@
               <div class="text-area">
                 <h3 class="text-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="icon">
@@ -146,6 +226,26 @@
               <div class="text-area">
                 <h3 class="text-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="">
+                  <svg class="social-media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
@@ -246,6 +346,28 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <p>Social Media</p>
+        <a href="">
+          <svg class="social-media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+        <a href="">
+          <svg class="social-media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
+        <a href="">
+          <svg class="social-media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+
+        <a href="">
+          <svg class="social-media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
       </div>
     </footer>
   </body>
