--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
           </a>
           <ul class="item-flex-header-list">
             <li>
-              <a class="text-medium menu-link" href="./index.html">Studio</a>
+              <a
+                class="text-medium menu-link menu-link-main"
+                href="./index.html"
+                >Studio</a
+              >
             </li>
             <li><a class="text-medium menu-link" href="">Portfolio</a></li>
             <li><a class="text-medium menu-link" href="">Contacts</a></li>
@@ -63,7 +67,7 @@
           <ul class="benefit-main-block">
             <li class="benefit-block">
               <div class="benefit-icon">
-                <svg width="100" height="100">
+                <svg width="100" height="100" aria-label="icon antenna">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -76,7 +80,7 @@
 
             <li class="benefit-block">
               <div class="benefit-icon">
-                <svg width="64" height="64">
+                <svg width="64" height="64" aria-label="icon clock">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -89,7 +93,7 @@
 
             <li class="benefit-block">
               <div class="benefit-icon">
-                <svg width="64" height="64">
+                <svg width="64" height="64" aria-label="icon diagram">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -102,7 +106,7 @@
 
             <li class="benefit-block">
               <div class="benefit-icon">
-                <svg width="64" height="64">
+                <svg width="64" height="64" aria-label="icon astronaut">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -131,22 +135,42 @@
                 <h3 class="text-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon instagram"
+                  >
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon twitter"
+                  >
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon facebook"
+                  >
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon linkedin"
+                  >
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -163,22 +187,42 @@
                 <h3 class="text-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon instagram"
+                  >
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon twitter"
+                  >
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon facebook"
+                  >
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon linkedin"
+                  >
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -195,22 +239,42 @@
                 <h3 class="text-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon instagram"
+                  >
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon twitter"
+                  >
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon facebook"
+                  >
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon linkedin"
+                  >
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -227,22 +291,42 @@
                 <h3 class="text-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon instagram"
+                  >
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon twitter"
+                  >
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon facebook"
+                  >
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
                 <a href="">
-                  <svg class="social-media-icon" width="16" height="16">
+                  <svg
+                    class="social-media-icon"
+                    width="16"
+                    height="16"
+                    aria-label="icon linkedin"
+                  >
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -348,23 +432,42 @@
         </p>
         <p>Social Media</p>
         <a href="">
-          <svg class="social-media-icon" width="16" height="16">
+          <svg
+            class="social-media-icon"
+            width="16"
+            height="16"
+            aria-label="icon instagram"
+          >
             <use href="./images/icons.svg#icon-instagram"></use>
           </svg>
         </a>
         <a href="">
-          <svg class="social-media-icon" width="16" height="16">
+          <svg
+            class="social-media-icon"
+            width="16"
+            height="16"
+            aria-label="icon twitter"
+          >
             <use href="./images/icons.svg#icon-twitter"></use>
           </svg>
         </a>
         <a href="">
-          <svg class="social-media-icon" width="16" height="16">
+          <svg
+            class="social-media-icon"
+            width="16"
+            height="16"
+            aria-label="icon facebook"
+          >
             <use href="./images/icons.svg#icon-facebook"></use>
           </svg>
         </a>
-
         <a href="">
-          <svg class="social-media-icon" width="16" height="16">
+          <svg
+            class="social-media-icon"
+            width="16"
+            height="16"
+            aria-label="icon linkedin"
+          >
             <use href="./images/icons.svg#icon-linkedin"></use>
           </svg>
         </a>
