--- a/index.html
+++ b/index.html
@@ -134,46 +134,56 @@
               <div class="text-area">
                 <h3 class="text-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon instagram"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon twitter"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon facebook"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon linkedin"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon instagram"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon twitter"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon facebook"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon linkedin"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="icon">
@@ -186,46 +196,56 @@
               <div class="text-area">
                 <h3 class="text-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon instagram"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon twitter"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon facebook"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon linkedin"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon instagram"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon twitter"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon facebook"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon linkedin"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="icon">
@@ -238,46 +258,56 @@
               <div class="text-area">
                 <h3 class="text-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon instagram"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon twitter"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon facebook"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon linkedin"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon instagram"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon twitter"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon facebook"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon linkedin"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="icon">
@@ -290,46 +320,56 @@
               <div class="text-area">
                 <h3 class="text-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon instagram"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon twitter"
-                  >
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon facebook"
-                  >
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="">
-                  <svg
-                    class="social-media-icon"
-                    width="16"
-                    height="16"
-                    aria-label="icon linkedin"
-                  >
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon instagram"
+                      >
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon twitter"
+                      >
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon facebook"
+                      >
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg
+                        class="social-list-icon"
+                        width="16"
+                        height="16"
+                        aria-label="icon linkedin"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
