--- a/index.html
+++ b/index.html
@@ -381,76 +381,130 @@
           <h2 class="title">Our Portfolio</h2>
           <ul class="icon-group-portfolio">
             <li class="icon-portfolio">
-              <img
-                src="./images/banking-app.jpg"
-                alt="banking applications"
-                width="360"
-                height="300"
-              />
+              <div class="icon-portfolio-image">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="banking applications"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-area-portfolio">
                 <h3 class="text-title">Banking App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="icon-portfolio">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="applications of
+              <div class="icon-portfolio-image">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="applications of
             cashless payment"
-                width="360"
-                height="300"
-              />
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-area-portfolio">
                 <h3 class="text-title">Cashless Payment</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="icon-portfolio">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="meditation applications"
-                width="360"
-                height="300"
-              />
+              <div class="icon-portfolio-image">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="meditation applications"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-area-portfolio">
                 <h3 class="text-title">Meditation App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="icon-portfolio">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="applications of taxi
+              <div class="icon-portfolio-image">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="applications of taxi
             services"
-                width="360"
-                height="300"
-              />
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-area-portfolio">
                 <h3 class="text-title">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="icon-portfolio">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="screen
+              <div class="icon-portfolio-image">
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="screen
             illustrations"
-                width="360"
-                height="300"
-              />
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-area-portfolio">
                 <h3 class="text-title">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="icon-portfolio">
-              <img
-                src="./images/online-courses.jpg"
-                alt="applications for
+              <div class="icon-portfolio-image">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="applications for
             studying and online courses"
-                width="360"
-                height="300"
-              />
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-area-portfolio">
                 <h3 class="text-title">Online Courses</h3>
                 <p class="text">Marketing</p>
@@ -471,46 +525,56 @@
           digital marketing & growth solutions.
         </p>
         <p>Social Media</p>
-        <a href="">
-          <svg
-            class="social-media-icon"
-            width="16"
-            height="16"
-            aria-label="icon instagram"
-          >
-            <use href="./images/icons.svg#icon-instagram"></use>
-          </svg>
-        </a>
-        <a href="">
-          <svg
-            class="social-media-icon"
-            width="16"
-            height="16"
-            aria-label="icon twitter"
-          >
-            <use href="./images/icons.svg#icon-twitter"></use>
-          </svg>
-        </a>
-        <a href="">
-          <svg
-            class="social-media-icon"
-            width="16"
-            height="16"
-            aria-label="icon facebook"
-          >
-            <use href="./images/icons.svg#icon-facebook"></use>
-          </svg>
-        </a>
-        <a href="">
-          <svg
-            class="social-media-icon"
-            width="16"
-            height="16"
-            aria-label="icon linkedin"
-          >
-            <use href="./images/icons.svg#icon-linkedin"></use>
-          </svg>
-        </a>
+        <ul class="social-list">
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg
+                class="social-list-icon"
+                width="16"
+                height="16"
+                aria-label="icon instagram"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg
+                class="social-list-icon"
+                width="16"
+                height="16"
+                aria-label="icon twitter"
+              >
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg
+                class="social-list-icon"
+                width="16"
+                height="16"
+                aria-label="icon facebook"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link">
+              <svg
+                class="social-list-icon"
+                width="16"
+                height="16"
+                aria-label="icon linkedin"
+              >
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
