--- a/index.html
+++ b/index.html
@@ -516,65 +516,69 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html">
-          Web<span class="half-logo-white">Studio</span>
-        </a>
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-        <p>Social Media</p>
-        <ul class="social-list">
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg
-                class="social-list-icon"
-                width="16"
-                height="16"
-                aria-label="icon instagram"
-              >
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg
-                class="social-list-icon"
-                width="16"
-                height="16"
-                aria-label="icon twitter"
-              >
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg
-                class="social-list-icon"
-                width="16"
-                height="16"
-                aria-label="icon facebook"
-              >
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-link">
-              <svg
-                class="social-list-icon"
-                width="16"
-                height="16"
-                aria-label="icon linkedin"
-              >
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="container flex-footer">
+        <div class="footer-first-part">
+          <a class="logo-footer" href="./index.html">
+            Web<span class="half-logo-white">Studio</span>
+          </a>
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-second-part">
+          <p class="footer-text-medium">Social Media</p>
+          <ul class="social-list-footer">
+            <li class="social-list-item-footer">
+              <a href="" class="social-list-link-footer">
+                <svg
+                  class="social-list-icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="icon instagram"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item-footer">
+              <a href="" class="social-list-link-footer">
+                <svg
+                  class="social-list-icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="icon twitter"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item-footer">
+              <a href="" class="social-list-link-footer">
+                <svg
+                  class="social-list-icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="icon facebook"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item-footer">
+              <a href="" class="social-list-link-footer">
+                <svg
+                  class="social-list-icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="icon linkedin"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
