--- a/index.html
+++ b/index.html
@@ -388,13 +388,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="text-area-portfolio">
                 <h3 class="text-title">Banking App</h3>
@@ -527,7 +526,7 @@
           </p>
         </div>
         <div class="footer-second-part">
-          <p class="footer-text-medium">Social Media</p>
+          <p class="footer-text-medium">Social media</p>
           <ul class="social-list-footer">
             <li class="social-list-item-footer">
               <a href="" class="social-list-link-footer">
